--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@effect/platform-node": "^0.103.0",
     "@mcrovero/effect-nextjs": "^0.31.0",
     "@mcrovero/effect-react-cache": "^0.2.3",
+    "@privy-io/react-auth": "^3.13.1",
     "client-only": "^0.0.1",
     "effect": "^3.19.8",
     "lucide-react": "^0.555.0",
@@ -16,9 +17,9 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "server-only": "^0.0.1",
-    "tailwindcss": "^4.1.17",
     "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.2.2"
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
