--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vercel": "^48.12.1"
   },
   "scripts": {
-    "build": "next build",
+    "build": "next build --webpack",
     "prepare": "husky"
   }
 }
